# task02---zoo-amitai007

./: CMakeLists.txt  README.md
include/: Animal.h  CMakeLists.txt  Dog.h  Lion.h  Location.h  Monkey.h  Zoo.h
src/: Animal.cpp  CMakeLists.txt  Dog.cpp  Ex05_Zoo.cpp  Lion.cpp  Location.cpp  Monkey.cpp  Zoo.cpp
